--- a/4-5 день/index.html
+++ b/4-5 день/index.html
@@ -12,7 +12,7 @@
         <header class="header1">
             <nav>
                 <ul class="topmenu">
-                  <li><a href="" class="down"><img width="25" height="25" src="./img/белая-точка.png">Найди нас...</a></li>
+                  <li><a href="" class="down"><img width="20" height="20" src="./img/белая-точка.png"> Найди нас...</a></li>
                   <li><a href="">Сеть магазинов Hobby Games</a></li>
                   <li><a href="">Отзывы</a></li>
                 </ul>
@@ -27,5 +27,10 @@
             <li><a href="#">Фото и видео</a></li>
           </ul>
 
+          <img class="img1" src="./img/content.jpg">
+
+          <div class="content">
+            
+          </div>
     </body>
 </html>
