--- a/4-5 день/index.html
+++ b/4-5 день/index.html
@@ -21,7 +21,7 @@
         </header>
 
         <ul id="navbar">
-            <li><a href="#">Главная</a></li>
+            <li><a href="index.html">Главная</a></li>
             <li><a href="#">Контакты</a></li>
             <li><a href="#">История предприятия</a></li>
             <li><a href="#">Фото и видео</a></li>
@@ -32,5 +32,9 @@
           <div class="content">
             
           </div>
+
+          <footer class="footer">
+
+          </footer>
     </body>
 </html>
