--- a/4-5 день/index.html
+++ b/4-5 день/index.html
@@ -30,11 +30,18 @@
           <img class="img1" src="./img/content.jpg">
 
           <div class="content">
-            
-          </div>
+            <div class="text-osnova"><P>Hobby Games – это сеть фирменных магазинов, в которых представлен широчайший ассортимент настольных игр. К нам приходят как преданные фанаты этого хобби, так и те, кто только начинает с ним знакомиться.
+
+              Магазины под брендом Hobby Games открываются с 2009 года в крупнейших городах России и СНГ, и сейчас их уже больше сотни: вы можете приобрести у нас игры в Москве, Санкт-Петербурге, Новосибирске, Казани, Екатеринбурге, Минске и многих других городах.
+              
+              В магазинах Hobby Games можно найти более 7000 настольных игр и дополнений, которые придутся по вкусу самым разным игрокам. У нас широко представлены как семейные, детские и вечериночные, так и сложные стратегические, коллекционно-карточные и тактические игры с миниатюрами. "Колонизаторы" и "Каркассон", "Манчкин" и "Взрывные котята", Spyfall и "Ужас Аркхэма" – список наших хитов на этом далеко не закончен. В наших магазинах вас ждут тысячи живых фантастических миров: миниатюры, правила и аксессуары для Warhammer 40,000 и Warhammer Age of Sigmar, свежие выпуски Magic: The Gathering, легендарные настольные ролевые игры Dungeons&Dragons и Pathfinder и многое другое!</P>
+          </div></div>
 
           <footer class="footer">
-
+            <p class="footer-text">Сеть магазинов Hobby Games</p>
+            <p class="footer-text">Копирование материалов разрешено только по согласию администрации</p>
+            <p class="footer-text">Содержимое сайта не является публичной офертой</p>
+            <p class="footer-text">Политика конфиденциальности Hobby Games</p>
           </footer>
     </body>
 </html>
