--- a/4-5 день/index.html
+++ b/4-5 день/index.html
@@ -10,19 +10,12 @@
     </head>
     <body>
         <header class="header1">
-            <nav>
-                <ul class="topmenu">
-                  <li><a href="" class="down"><img width="20" height="20" src="./img/белая-точка.png"> Найди нас...</a></li>
-                  <li><a href="">Сеть магазинов Hobby Games</a></li>
-                  <li><a href="">Отзывы</a></li>
-                </ul>
-                <form>
-              </nav>
+           <p align="center"><img width="450" height="150" src="./img/logo_for_site.png"></p>
         </header>
         <br>
         <ul id="navbar">
             <li><a href="index.html">Главная</a></li>
-            <li><a href="#">Контакты</a></li>
+            <li><a href="./page/contact.html">Контакты</a></li>
             <li><a href="#">История предприятия</a></li>
             <li><a href="#">Фото и видео</a></li>
           </ul>
