--- a/4-5 день/index.html
+++ b/4-5 день/index.html
@@ -9,32 +9,30 @@
         <title>Hobby Games</title>
     </head>
     <body>
-        <header class="header1">
-           <p align="center"><img width="450" height="150" src="./img/logo_for_site.png"></p>
-        </header>
+        <div class="logo-content">
+        <p align="center"><img src="./img/logo-glav.png"></p>
+        <p class="p">Hobby Games – это сеть фирменных магазинов, в которых представлен широчайший ассортимент настольных игр. К нам приходят как преданные фанаты этого хобби, так и те, кто только начинает с ним знакомиться.
+        </p><br>
+        <p class="p">Магазины под брендом Hobby Games открываются с 2009 года в крупнейших городах России и СНГ, и сейчас их уже больше сотни: вы можете приобрести у нас игры в Москве, Санкт-Петербурге, Новосибирске, Казани, Екатеринбурге, Минске и многих других городах.</p>
+        </div>
         <br>
-        <ul id="navbar">
-            <li><a href="index.html">Главная</a></li>
-            <li><a href="./page/contact.html">Контакты</a></li>
-            <li><a href="#">История предприятия</a></li>
-            <li><a href="#">Фото и видео</a></li>
-          </ul>
+        <div class="header">
+            <nav>
+            <a class="nav" href="#">Главная</a>    
+            <a class="nav" href="#">О нас</a>    
+            <a class="nav" href="#">Контакты</a>   
+            <a class="nav" href="#">История</a>   
+            <a class="nav" href="#">Фото и видео</a>
+            </nav>
+        </div>
         <br>
-          <img class="img1" src="./img/content.jpg">
-
-          <div class="content">
-            <div class="text-osnova"><P>Hobby Games – это сеть фирменных магазинов, в которых представлен широчайший ассортимент настольных игр. К нам приходят как преданные фанаты этого хобби, так и те, кто только начинает с ним знакомиться.
-
-              Магазины под брендом Hobby Games открываются с 2009 года в крупнейших городах России и СНГ, и сейчас их уже больше сотни: вы можете приобрести у нас игры в Москве, Санкт-Петербурге, Новосибирске, Казани, Екатеринбурге, Минске и многих других городах.
-              
-              В магазинах Hobby Games можно найти более 7000 настольных игр и дополнений, которые придутся по вкусу самым разным игрокам. У нас широко представлены как семейные, детские и вечериночные, так и сложные стратегические, коллекционно-карточные и тактические игры с миниатюрами. "Колонизаторы" и "Каркассон", "Манчкин" и "Взрывные котята", Spyfall и "Ужас Аркхэма" – список наших хитов на этом далеко не закончен. В наших магазинах вас ждут тысячи живых фантастических миров: миниатюры, правила и аксессуары для Warhammer 40,000 и Warhammer Age of Sigmar, свежие выпуски Magic: The Gathering, легендарные настольные ролевые игры Dungeons&Dragons и Pathfinder и многое другое!</P>
-          </div></div>
-
-          <footer class="footer">
-            <p class="footer-text">Сеть магазинов Hobby Games</p>
-            <p class="footer-text">Копирование материалов разрешено только по согласию администрации</p>
-            <p class="footer-text">Содержимое сайта не является публичной офертой</p>
-            <p class="footer-text">Политика конфиденциальности Hobby Games</p>
-          </footer>
+        <div class="o-nas">
+           <p class="img-o-nas">
+            <img class="o-nas-img" align="left" src="./img/o-nas.png">
+            Hobby Games – это интернет-магазин настольных игр и аксессуаров, а также широкая сеть розничных магазинов по всей России и странам СНГ. У нас представлен широкий выбор самых разных настольных игр: от простых и весёлых игр для семьи или вечеринок до сложных стратегий или ролевых систем. Всего в нашем магазине более 7000 позиций!
+            <br>
+                На наших полках вы можете найти игры следующих брендов и производителей (и не только!)
+           </p>
+        </div>
     </body>
 </html>
