--- a/4-5 день/index.html
+++ b/4-5 день/index.html
@@ -27,12 +27,34 @@
         </div>
         <br>
         <div class="o-nas">
-           <p class="img-o-nas">
+           <p class="text-o-nas">
             <img class="o-nas-img" align="left" src="./img/o-nas.png">
             Hobby Games – это интернет-магазин настольных игр и аксессуаров, а также широкая сеть розничных магазинов по всей России и странам СНГ. У нас представлен широкий выбор самых разных настольных игр: от простых и весёлых игр для семьи или вечеринок до сложных стратегий или ролевых систем. Всего в нашем магазине более 7000 позиций!
-            <br>
+            <br><br>
                 На наших полках вы можете найти игры следующих брендов и производителей (и не только!)
+                <br><br>
+                Главное для нас – интересы клиентов, поэтому мы постоянно пополняем ассортимент наших магазинов актуальными новинками, заботимся о выгодных ценах и неустанно улучшаем сервис: качество обслуживания, сроки и доступность доставки и многое другое.
+                <br><br>
+Постоянных покупателей может заинтересовать наша Бонусная программа, которая позволяет накапливать бонусные баллы за покупки и оплачивать ими до 15% следующих заказов.
+<br><br>
+Если вы знаете, как улучшить работу наших магазинов, – помогите узнать об этом и нам, отправив письмо на адрес client-service@hobbygames.ru
            </p>
         </div>
+        <div class="header">
+            <nav>
+            <a class="nav" href="#">Ищи нас в Челябинске...</a>    
+            </nav>
+        </div>
+        <br>
+        <div class="o-nas">
+            <p class="text-o-nas">
+             <img class="carta" align="left" src="./img/carta.png">
+             Hobby Games – Челябинск, на улице Кирова
+             <br>
+             <img class="white-img" src="./img/белая-точка.png"> г. Челябинск, ул. Кирова, д. 110
+             <br>
+
+            </p>
+         </div>
     </body>
 </html>
