--- a/4-5 день/index.html
+++ b/4-5 день/index.html
@@ -18,9 +18,9 @@
         <br>
         <div class="header">
             <nav>
-            <a class="nav" href="#">Главная</a>    
-            <a class="nav" href="#">О нас</a>    
-            <a class="nav" href="#">Контакты</a>   
+            <a class="nav" href="index.html">Главная</a>    
+            <a class="nav" href="">О нас</a>    
+            <a class="nav" href="./page/contact.html">Контакты</a>   
             <a class="nav" href="#">История</a>   
             <a class="nav" href="#">Фото и видео</a>
             </nav>
@@ -49,12 +49,14 @@
         <div class="o-nas">
             <p class="text-o-nas">
              <img class="carta" align="left" src="./img/carta.png">
-             Hobby Games – Челябинск, на улице Кирова
+             <span class="orange">Hobby Games – Челябинск, на улице Кирова</span>
              <br>
-             <img class="white-img" src="./img/белая-точка.png"> г. Челябинск, ул. Кирова, д. 110
-             <br>
-
+             <img class="bel" align="left" src="./img/белая-точка.png">г. Челябинск, ул. Кирова, д. 110  <br>
+             <img class="tel" align="left" src="./img/телефон.png"> +7 (351) 700-93-97<br>
+             <span class="orange">С 10:00 до 21:00 Без перерывов и выходных</span>
             </p>
          </div>
+
+
     </body>
 </html>
