--- a/4-5 день/index.html
+++ b/4-5 день/index.html
@@ -18,8 +18,7 @@
         <br>
         <div class="header">
             <nav>
-            <a class="nav" href="index.html">Главная</a>    
-            <a class="nav" href="">О нас</a>    
+            <a class="nav" href="index.html">Главная</a>       
             <a class="nav" href="./page/contact.html">Контакты</a>   
             <a class="nav" href="#">История</a>   
             <a class="nav" href="#">Фото и видео</a>
@@ -57,6 +56,8 @@
             </p>
          </div>
 
-
+         <div class="footer">
+            <img class="img-footer" src="./img/logo_for_site.png">
+         </div>
     </body>
 </html>
