--- a/4-5 день/index.html
+++ b/4-5 день/index.html
@@ -21,7 +21,7 @@
             <a class="nav" href="index.html">Главная</a>       
             <a class="nav" href="./page/contact.html">Контакты</a>   
             <a class="nav" href="#">История</a>   
-            <a class="nav" href="#">Фото и видео</a>
+            <a class="nav" href="./page/photo.html">Фото и видео</a>
             </nav>
         </div>
         <br>
